# markflow

./: .dockerignore  Dockerfile  Dockerfile.release  README.md  docker-compose.yml  docker-entrypoint.sh  dockerhub.md
.github/workflows/: build-release.yml
backend/: Cargo.toml  config.toml
backend/.cargo/: config.toml
backend/src/: agent_protocol.rs  auth.rs  db.rs  main.rs  models.rs
backend/src/routes/: admin.rs  agent.rs  auth.rs  documents.rs  mod.rs  projects.rs  shares.rs  static_files.rs  uploads.rs
frontend/: index.html  package.json  vite.config.ts
frontend/scripts/: prepare-offline-assets.mjs
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/agent/: agent-protocol.json  protocol.ts
frontend/src/assets/styles/: global.css
frontend/src/components/: AgentPanel.vue  AttachmentManagerDialog.vue  DirStats.vue  DocTree.vue  MarkdownEditor.vue  ProfileDialog.vue  ProjectOverview.vue  ShareDialog.vue  SystemSettingsDialog.vue  TreeNodeGlyph.vue  UserManagementDialog.vue  VditorPreview.vue  WelcomeScreen.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  docs.ts  projects.ts  system.ts
frontend/src/utils/: agentEditorBridge.ts  agentTools.ts  agentWriter.ts  authErrors.ts  docDraftCache.ts  managedUploads.ts  request.ts  uploads.ts  vditor.ts
frontend/src/views/: Home.vue  Login.vue  Login2FA.vue  Register.vue  ShareExpired.vue  ShareView.vue
