[package]
name = "markflow"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "markflow"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"
lazy_static = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[build-dependencies]
# build script to copy frontend dist
toml = "0.8"
